# otium

./: .gitignore  .gitmodules  README.md
kernel/: Cargo.toml  README.md  build.rs  linker.ld  run-riscv32.sh  run-wasm.js  run-wasm.sh
kernel/.cargo/: config.toml
kernel/src/: main.rs  prog_echo.rs  prog_hello.rs
kernel/src/riscv32/: boot.s  core.rs  support.c
kernel/src/wasm/: core.rs  support.c
lab/rp-scratch/: Cargo.toml  README.md
lab/rp-scratch/src/: main.rs
os/: .clang-format  .clang-tidy  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  bench-mandelbrot.tcl  bench-tcl.sh  build-common.sh  build-posix.sh  build-tcl-repl.sh  build.zig  common-flags.sh  compile-riscv.sh  compile-wasm.sh  config.sh  default.nix  editor-bugs.txt  meson.build  meson_options.txt  objdump.sh  otcommon.h  otconfig.h  otconfig.h.tmpl  package-lock.json  package.json  run-riscv.sh  run-wasm.js  run-wasm.sh  run.sh  services.yaml  test-lint.sh  test-snapshot.py  test-unit.sh  test.sh  test.txt  wasm-support.js
os/.cargo/: config.toml
os/.semgrep/rules/: no-kernel-includes-in-userspace.yml  no-static-vars.yml
os/agent-docs/: edit.md  editor.md  filesystem.md  graphics-apps.md  ipc.md  js-support.md
os/cross/: riscv32.txt  wasm.txt
os/fs-in/: gfx1.tcl  gfxdemo.tcl  lorem8k.txt  mandel.tcl  shellrc.tcl  simple.tcl
os/ot/: common.h  config.h  config.h.meson.in  config.h.tmpl  meson.build  test-linking.cpp  user.hpp
os/ot/core/: ipc.cpp  kernel-tests.cpp  kernel-tests.cpp.bak  kernel.hpp  main.cpp  memory-test.cpp  memory.cpp  platform-test.cpp  process-test.cpp  process.cpp  startup.cpp  std.cpp
os/ot/core/drivers/: drv-gfx-virtio.cpp  drv-gfx-virtio.hpp  drv-virtio.cpp  gfx.hpp
os/ot/core/platform/: edit-termbox.cpp  edit-test.cpp  ipc-file.cpp  platform-riscv.cpp  platform-riscv.cpp.bak  platform-wasm.cpp  posix-file.cpp  tcl-repl.cpp  tevl-posix.cpp  tevl-termbox.cpp  tevl-test.cpp  user-riscv.cpp  user-wasm.cpp
os/ot/drivers/: drv-gfx-virtio.cpp  drv-gfx-virtio.hpp  drv-virtio.cpp  drv-virtio.hpp
os/ot/kernel/: drv-gfx-virtio.cpp  drv-gfx-virtio.hpp  drv-virtio.cpp  drv-virtio.hpp  gfx-demo.cpp  ipc.cpp  kernel-link.ld  kernel.hpp  main.cpp  memory-test.cpp  memory.cpp  platform-riscv.cpp  platform-test.cpp  platform-wasm.cpp  process-test.cpp  process.cpp  startup.cpp  std.cpp
os/ot/lib/: address.hpp  app-framework.cpp  app-framework.hpp  arena.cpp  arena.hpp  arguments.hpp  error-codes.hpp  file.cpp  file.hpp  font-blit16.hpp  font-proggy.hpp  frame-manager.cpp  frame-manager.hpp  gfx-font-data.hpp  gfx-util.cpp  gfx-util.hpp  ipc.hpp  keyboard-utils.cpp  keyboard-utils.hpp  logger.hpp  math.hpp  md5.cpp  md5.hpp  messages.hpp  page-allocator.hpp  pair.hpp  printf-test.cpp  result.hpp  std.cpp  string-test.cpp  string.cpp  typed-int.hpp  vector-test.cpp  vector.hpp
os/ot/lib/mpack/: mpack-reader-test.cpp  mpack-reader.cpp  mpack-reader.hpp  mpack-utils-test.cpp  mpack-utils.cpp  mpack-utils.hpp  mpack-writer-test.cpp  mpack-writer.hpp  mpack.h
os/ot/platform/: user-main.cpp
os/ot/platform/riscv/: platform-riscv.cpp  user-riscv.cpp
os/ot/platform/wasm/: platform-wasm.cpp  shared-wasm.cpp  user-wasm.cpp
os/ot/posix-util/: posix-file.cpp  posix-std.cpp  tcl-repl.cpp  tevl-posix.cpp  tevl.cpp
os/ot/programs/: prog-shell.cpp  prog-shell.h  tcl-test.cpp  tcl.cpp  tevl.cpp
os/ot/shared/: address.hpp  error-codes.hpp  messages.hpp  mpack-reader-test.cpp  mpack-reader.cpp  mpack-reader.hpp  mpack-utils-test.cpp  mpack-utils.cpp  mpack-utils.hpp  mpack-writer-test.cpp  mpack-writer.hpp  mpack.h  mpacker-test.cpp  mpacker.hpp  page-allocator.hpp  regstr-test.cpp  regstr.hpp  result-test.cpp  result.hpp  shared-riscv.cpp  shared-wasm.cpp  std.cpp  string-view.hpp
os/ot/user/: comm-writer.cpp  edit-test.cpp  edit.cpp  edit.hpp  file.cpp  file.hpp  hashmap.hpp  local-storage.hpp  memory-allocator.cpp  prog-echo.cpp  prog-fstest.cpp  prog-gfxscratch.cpp  prog-scratch.cpp  prog-scratch.h  prog-shell.cpp  prog-shell.h  prog-spacedemo.cpp  prog-typedemo.cpp  prog.h  shell.h  string-test.cpp  string.cpp  string.hpp  tcl-test.cpp  tcl.cpp  tcl.h  tcl.hpp  tevl-test.cpp  tevl.cpp  tevl.h  tevl.hpp  user-main.cpp  user-riscv.cpp  user-shared.cpp  user-wasm.cpp  user.hpp  user.ld  vector.hpp
os/ot/user/fibonacci/: impl.cpp
os/ot/user/filesystem/: impl-memory.cpp  impl-none.cpp  impl-onefile.cpp  impl-tarfs.cpp  impl.cpp  types.hpp
os/ot/user/fs/: disk.hpp  fatfs-diskio.cpp  impl-fat.cpp  impl-memory.cpp  impl-onefile.cpp  impl-wasm.cpp  virtio-disk.cpp  virtio-disk.hpp
os/ot/user/graphics/: backend-none.hpp  backend-sdl.hpp  backend-test.hpp  backend-virtio.cpp  backend-virtio.hpp  backend-wasm.hpp  backend.hpp  frame-manager.cpp  impl.cpp
os/ot/user/keyboard/: backend-none.hpp  backend-virtio.cpp  backend-virtio.hpp  backend-wasm.hpp  backend.hpp  impl.cpp
os/ot/user/virtio/: virtio-blk.hpp  virtio-debug.hpp  virtio.hpp
os/otk/: kernel-link.ld  kernel-prog.cpp  kernel.cpp  kernel.hpp  memory-test.cpp  memory.cpp  platform-riscv.cpp  platform-test.cpp  platform-wasm.cpp  process-test.cpp  process.cpp  riscv.cpp  std.cpp
os/otu/: prog-shell.cpp  tcl.cpp  tcl.h  user-riscv.cpp  user-wasm.cpp  user.hpp
os/snapshots/: test-alternate-riscv.txt  test-alternate-wasm.txt  test-filesystem-fat-riscv.txt  test-filesystem-riscv.txt  test-graphics-riscv.txt  test-graphics-wasm.txt  test-hello-riscv.txt  test-hello.txt  test-ipc-ordering-riscv.txt  test-ipc-ordering-wasm.txt  test-ipc-riscv.txt  test-ipc-wasm.txt  test-mem-riscv.txt  test-mem.txt
os/src/: common.c  common.h  common.zig  kern-zig.zig  kernel.c  kernel.h  kernel.ld  kernel.zig  main.rs  prog-hello-world.zig  prog_echo.rs
os/src/riscv32/: boot.s  core.rs  kernel.c  link.ld
os/src/wasm/: core.rs
os/src/wasm32/: kernel.c
os/tools/: create-disk-image.sh  embed-file.py  embed-font.py  extract-disk-image.sh  generate-ipc.sh  run-qemu-riscv.sh  run-wasm.sh  runtime-config.sh.in
os/tools/ipc-codegen/: deno.json  generator.ts  main.ts  parser.ts
os/tools/ipc-codegen/templates/: client-impl.eta  (+8 more)
(+108 files in other folders)
