[package]
name = "os"
version = "0.1.0"
edition = "2024"

[features]
default = ["prog_hello"]
prog_echo = []
prog_hello = []

[dependencies]

[build-dependencies]
cc = "1.0"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints.clippy]
# Enable useful clippy lints for kernel development
undocumented_unsafe_blocks = "warn"
missing_safety_doc = "warn"
unnecessary_safety_comment = "warn"
multiple_unsafe_ops_per_block = "warn"