[package]
name = "rp2350-scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3"
embedded-hal = "1.0.0"
heapless = "0.8.0"
panic-halt = "0.2.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
[dependencies.rp235x-hal]
version = "0.3.0"
features = ["binary-info", "critical-section-impl", "rt", "defmt"]
